# rates-bond-quant

./: .gitignore  COPYRIGHT.md  LICENSE  README.md  VERSION_LOG.md  pyproject.toml
assets/: README.md
backend/: __init__.py  app.py
demos/: ficc_rates_bond_demo.ipynb  run_demo.py
docs/: cloudflare_pages_deployment.md  mvp_plan.md  public_private_boundary.md  system_design.md  versioning_strategy.md
examples/: README.md
frontend/: README.md  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/styles/: globals.css
logs/: project_log.md
notes/: duration_convexity.md  ficc_rates_intro.md
outputs/: README.md  sample_rates_bond_quant_report.md
src/ficc_rates_bond_quant/: __init__.py  bond_math.py  pnl.py  portfolio.py  scenarios.py
src/ficc_rates_os/: __init__.py
tests/: README.md  test_bond_math.py  test_scenarios_and_pnl.py
