[project]
name = "ficc-rates-bond-quant"
version = "0.5.0"
description = "Educational FICC rates bond quant project for pricing, duration, convexity, scenarios, and PnL."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
